# Bmap

./: README.md
geant4/: CMakeLists.txt
geant4/ana/ideal/: README.md  direction.loop  ideal.Bmap.mac  ideal.Bzero.mac  ideal.run.mac  ideal_ring.C  invraytrac.C  io.C  momentum.loop  particle.loop  run.sh
geant4/cfg/: Bmap.mac
geant4/src/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  MagneticField.cc  MagneticField.hh  Makefile  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RootIO.cc  RootIO.hh  RunAction.cc  SensitiveDetector.cc  SensitiveDetector.hh  StackingAction.cc  StackingAction.hh  SteppingAction.cc  main.cc
macros/: Bmap.C  io.C  read_Bmap.C  ring.C
